Fix list style on Safari.

--- a/public/_static/site.css
+++ b/public/_static/site.css
@@ -96,7 +96,12 @@ ul {
 	padding-left: 0.5rem;
 	margin: 0.5rem;
 	margin-bottom: 1rem;
-	list-style-type: "› ";
+	list-style: none;
+}
+
+lli:before {
+	content: "›";
+	margin-right: 0.4rem;
 }
 
 li > ul, li > ol {
